Update CLI reference yaml for 17.03.1

--- a/_data/engine-cli/docker_container.yaml
+++ b/_data/engine-cli/docker_container.yaml
@@ -1,6 +1,6 @@
 command: docker container
 short: Manage containers
-long: Manage containers
+long: Manage containers.
 usage: docker container
 pname: docker
 plink: docker.yaml
