--- a/_data/engine-cli/docker_inspect.yaml
+++ b/_data/engine-cli/docker_inspect.yaml
@@ -45,7 +45,7 @@ examples: |-
   ### Get an instance's image name
 
   ```bash
-  $ docker inspect --format='{{.Container.Spec.Image}}' $INSTANCE_ID
+  $ docker inspect --format='{{.Config.Image}}' $INSTANCE_ID
   ```
 
   ### List all port bindings
