--- a/_data/engine-cli/docker_secret.yaml
+++ b/_data/engine-cli/docker_secret.yaml
@@ -1,6 +1,6 @@
 command: docker secret
 short: Manage Docker secrets
-long: Manage Docker secrets
+long: Manage secrets.
 usage: docker secret
 pname: docker
 plink: docker.yaml
