--- a/_data/engine-cli/docker_secret_inspect.yaml
+++ b/_data/engine-cli/docker_secret_inspect.yaml
@@ -9,6 +9,8 @@ long: |-
 
   Go's [text/template](http://golang.org/pkg/text/template/) package
   describes all the details of the format.
+
+  For detailed information about using secrets, refer to [manage sensitive data with Docker secrets](https://docs.docker.com/engine/swarm/secrets/).
 usage: docker secret inspect [OPTIONS] SECRET [SECRET...]
 pname: docker secret
 plink: docker_secret.yaml
