--- a/_data/engine-cli/docker_secret_ls.yaml
+++ b/_data/engine-cli/docker_secret_ls.yaml
@@ -1,7 +1,10 @@
 command: docker secret ls
 aliases: list
 short: List secrets
-long: Run this command on a manager node to list the secrets in the swarm.
+long: |-
+  Run this command on a manager node to list the secrets in the swarm.
+
+  For detailed information about using secrets, refer to [manage sensitive data with Docker secrets](https://docs.docker.com/engine/swarm/secrets/).
 usage: docker secret ls [OPTIONS]
 pname: docker secret
 plink: docker_secret.yaml
