--- a/_data/engine-cli/docker_secret_rm.yaml
+++ b/_data/engine-cli/docker_secret_rm.yaml
@@ -4,6 +4,8 @@ short: Remove one or more secrets
 long: |-
   Removes the specified secrets from the swarm. This command has to be run
   targeting a manager node.
+
+  For detailed information about using secrets, refer to [manage sensitive data with Docker secrets](https://docs.docker.com/engine/swarm/secrets/).
 usage: docker secret rm SECRET [SECRET...]
 pname: docker secret
 plink: docker_secret.yaml
