--- a/_data/engine-cli/docker_commit.yaml
+++ b/_data/engine-cli/docker_commit.yaml
@@ -61,7 +61,7 @@ examples: |-
   ```bash
   $ docker ps
 
-  ICONTAINER ID       IMAGE               COMMAND             CREATED             STATUS              PORTS              NAMES
+  CONTAINER ID       IMAGE               COMMAND             CREATED             STATUS              PORTS              NAMES
   c3f279d17e0a        ubuntu:12.04        /bin/bash           7 days ago          Up 25 hours                            desperate_dubinsky
   197387f1b436        ubuntu:12.04        /bin/bash           7 days ago          Up 25 hours                            focused_hamilton
 
