--- a/_data/engine-cli/docker_network.yaml
+++ b/_data/engine-cli/docker_network.yaml
@@ -1,6 +1,8 @@
 command: docker network
 short: Manage networks
-long: Manage networks
+long: |-
+  Manage networks. You can use subcommand to create, list, inspect, remove,
+  connect and disconnect networks.
 usage: docker network
 pname: docker
 plink: docker.yaml
