--- a/_data/engine-cli/docker_secret_create.yaml
+++ b/_data/engine-cli/docker_secret_create.yaml
@@ -1,8 +1,8 @@
 command: docker secret create
 short: Create a secret from a file or STDIN as content
-long: |-
-  Creates a secret using standard input or from a file for the secret content. You must run this
-  command on a manager node.
+long: "Creates a secret using standard input or from a file for the secret content.
+  You must run this command on a manager node. \n\nFor detailed information about
+  using secrets, refer to [manage sensitive data with Docker secrets](https://docs.docker.com/engine/swarm/secrets/)."
 usage: docker secret create [OPTIONS] SECRET file|-
 pname: docker secret
 plink: docker_secret.yaml
