--- a/_data/engine-cli/docker_network.yaml
+++ b/_data/engine-cli/docker_network.yaml
@@ -1,7 +1,7 @@
 command: docker network
 short: Manage networks
 long: |-
-  Manage networks. You can use subcommand to create, list, inspect, remove,
+  Manage networks. You can use subcommands to create, inspect, list, remove,
   connect and disconnect networks.
 usage: docker network
 pname: docker
