--- a/_data/docsarchive/archives.yaml
+++ b/_data/docsarchive/archives.yaml
@@ -1,4 +1,7 @@
 - archive:
+  name: edge
+  image: docs/docker.github.io:latest
+- archive:
   name: v17.03
   image: docs/docker.github.io:latest
   current: true
