Add missing bullet points

--- a/_data/glossary.yaml
+++ b/_data/glossary.yaml
@@ -54,9 +54,9 @@ container: |
 
   A Docker container consists of
 
-  A Docker image
-  Execution environment
-  A standard set of instructions
+  - A Docker image
+  - An execution environment
+  - A standard set of instructions
 
   The concept is borrowed from Shipping Containers, which define a standard to ship
   goods globally. Docker defines a standard to ship software.
